# example-rag

./: .env.example  .gitattributes  .gitignore  README.md  app.py  db.duckdb  mypy.ini  package-lock.json  pyproject.toml
config/: mistral-repos.json
data/mistral-repos/client-js/: github-issue-comments.json  github-issues.json  github-pull-comments.json  github-pulls.json  metadata.json  repomix-output.xml
data/mistral-repos/client-python/: github-issue-comments.json  github-issues.json  github-pull-comments.json  github-pulls.json  metadata.json  repomix-output.xml
data/mistral-repos/client-ts/: github-issue-comments.json  github-issues.json  github-pull-comments.json  github-pulls.json  metadata.json  repomix-output.xml
data/mistral-repos/cookbook/: github-issue-comments.json  github-issues.json  github-pull-comments.json  github-pulls.json  metadata.json
data/mistral-repos/mistral-common/: github-issue-comments.json  github-issues.json  github-pull-comments.json  github-pulls.json  metadata.json
data/mistral-repos/mistral-evals/: github-issues.json  github-pull-comments.json  github-pulls.json  metadata.json  repomix-output.xml
data/mistral-repos/mistral-finetune/: github-issue-comments.json  github-issues.json  github-pulls.json  (+3 more)
data/processed/: download-summary.json
evaluations/: README.md  __init__.py  basic_evaluator.py  metrics.py  run_evaluation.py  test_datasets.py
scripts/: download_mistral_repos.py
singer-tap-github/: README.md  properties.json  singer_config.json  target_config.json
src/: __init__.py  chatbot.py  data_loader.py  rag_tools.py
tests/: __init__.py  test_chatbot.py  test_data_loader.py  test_rag_tools.py
(+15 files in other folders)
